update src code

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header class="header">
         <a href="#home" class="logo">
-            <span>Võ Văn Quyến</span>
+            <span>Van Quyen</span>
         </a>
 
         <nav class="navbar">
@@ -36,7 +36,7 @@
 
     <section class="home" id="home">
         <div class="home-content">
-            <h1>Hi, I'm <span>Quyến</span></h1>
+            <h1>Hi, I'm <span>Quyen</span></h1>
             <h3>I'm a <span>second-year Information Technology student</span></h3>
             <p>I am currently studying at the University of Transport in Ho Chi Minh City. I have a strong passion for
                 programming, and I'm determined to pursue it wholeheartedly.</p>
@@ -57,7 +57,8 @@
             <div class="about-desc">
                 <ul class="about-info">
                     <li>Personal Information</li>
-                    <li>Full Name: Võ Văn Quyến</li>
+                    <li>Full Name: Vo Van Quyen</li>
+                    <li>Gender: Male</li>
                     <li>Day of Birth: 27-03-2005</li>
                     <li>Address: Ho Chi Minh City</li>
                 </ul>
@@ -136,6 +137,11 @@
                 <p>Achievement3</p>
                 <a>Read More</a>
             </div>
+
+            <div class="achievements-box">
+                <p>Achievement4</p>
+                <a>Read More</a>
+            </div>
         </div>
     </section>
 
@@ -180,14 +186,6 @@
                 </div>
             </div>
 
-            <div class="projects-box">
-                <img src="assets/img/EduQuint.jpg" alt="EduQuint Image">
-                <div class="projects-layer">
-                    <h4>EduQuint</h4>
-                    <p>This is my final project for the Web Programming course, and I hope to complete it soon.</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
-                </div>
-            </div>
         </div>
     </section>
 
