upload new version

--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
 <body>
     <header class="header">
         <a href="#home" class="logo">
-            <span>Van Quyen</span>
+            <span class="span-hl">Van Quyen</span>
         </a>
+
+        <i class="fa-solid fa-bars" id="menu-icon"></i>
 
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#about">About</a>
+            <a href="#hobbies">Hobbies</a>
             <a href="#skills">Skills</a>
             <a href="#achievements">Achievements</a>
             <a href="#projects">Projects</a>
@@ -36,84 +39,316 @@
 
     <section class="home" id="home">
         <div class="home-content">
-            <h1>Hi, I'm <span>Quyen</span></h1>
-            <h3>I'm a <span>second-year Information Technology student</span></h3>
-            <p>I am currently studying at the University of Transport in Ho Chi Minh City. I have a strong passion for
-                programming, and I'm determined to pursue it wholeheartedly.</p>
+            <h1>Hi, I'm <span class="span-hl">Quyen</span></h1>
+            <h3>I'm a
+                <span style="--i:4;" data-text="Coder">Coder</span>
+                <span style="--i:3;" data-text="Designer">Designer</span>
+                <span style="--i:2;" data-text="IT Student">IT Student</span>
+                <span style="--i:1;" data-text="Web Developer">Web Developer</span>
+            </h3>
+            <p>I’m a second-year student at the University of Transport in Ho Chi Minh City, driven by a strong passion
+                for
+                programming. I’m dedicated to learning, growing, and turning that passion into impactful, real-world
+                solutions.</p>
         </div>
 
         <div class="home-img">
-            <img src="assets/img/my_image.jpg" alt="My Image" class="my-img">
+            <div class="my-img">
+                <div class="img-white">
+                    <img src="assets/img/my_image.jpg" alt="My Image">
+                </div>
+            </div>
         </div>
+
     </section>
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="assets/img/my_image.jpg" alt="My Image" class="my-img">
+            <div class="my-img">
+                <div class="img-white">
+                    <img src="assets/img/my_image1.jpg" alt="My Image">
+                </div>
+            </div>
         </div>
 
+
         <div class="about-content">
-            <h2 class="heading">About <span>Me</span></h2>
-            <div class="about-desc">
-                <ul class="about-info">
-                    <li>Personal Information</li>
-                    <li>Full Name: Vo Van Quyen</li>
-                    <li>Gender: Male</li>
-                    <li>Day of Birth: 27-03-2005</li>
-                    <li>Address: Ho Chi Minh City</li>
-                </ul>
-                <ul class="about-info">
-                    <li>Hobies</li>
-                    <li>Coding for Fun</li>
-                    <li>Tech Tinkering</li>
-                    <li>Gaming & Esports</li>
-                    <li>Cooking</li>
-                </ul>
+            <h2 class="heading">About <span class="span-hl">Me</span></h2>
+
+            <div class="about-me">
+                <p>
+                    My name is <span class="span-hl">Vo Van Quyen</span>, a male born on March 27, 2005, currently
+                    living in Ho Chi Minh City. I am a
+                    second-year IT student with a strong interest in programming and modern technology. I enjoy
+                    exploring new tools and continuously improving my technical skills to keep up with the fast-evolving
+                    tech world.
+                </p>
+                <p>
+                    My goal is to become a professional and innovative developer who contributes to impactful
+                    projects and real-world solutions. I aspire to work on meaningful technologies that can help improve
+                    people’s lives, while also growing alongside a dynamic and forward-thinking team in the tech
+                    industry.
+                </p>
             </div>
-            <p class="about-prof-goal">
-                As an IT student, I’m deeply passionate about technology and driven by a desire to excel as a skilled
-                programmer. My goal is to become an outstanding developer, contributing meaningfully to innovative
-                projects and advancing the tech industry with my expertise.
-            </p>
+        </div>
+    </section>
+
+    <section class="hobbies" id="hobbies">
+        <h2 class="heading">Hobbies</h2>
+
+        <div class="hobbies-container">
+            <div class="hobbies-box">
+                <div class="hobbies-wrapper">
+                    <div class="hobbies-icon">
+                        <i class="fa-solid fa-book-open-reader"></i>
+                    </div>
+
+                    <div class="hobbies-info">
+                        <h4>Learning about website</h4>
+                        <p>
+                            I have a strong passion for websites, always looking for the latest knowledge to learn
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="hobbies-box">
+                <div class="hobbies-wrapper">
+                    <div class="hobbies-icon">
+                        <i class="fa-solid fa-camera-retro"></i>
+                    </div>
+
+                    <div class="hobbies-info">
+                        <h4>Photography</h4>
+                        <p>
+                            Passionate about beautiful scenery, searching for and creating the best photos
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="hobbies-box">
+                <div class="hobbies-wrapper">
+                    <div class="hobbies-icon">
+                        <i class="fa-solid fa-video"></i>
+                    </div>
+
+                    <div class="hobbies-info">
+                        <h4>Content Creation</h4>
+                        <p>
+                            I run a TikTok channel with over 1.5K followers, where I immerse myself in music and video
+                            creation to express emotions and share personal stories
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="hobbies-box">
+                <div class="hobbies-wrapper">
+                    <div class="hobbies-icon">
+                        <i class="fa-solid fa-utensils"></i>
+                    </div>
+
+                    <div class="hobbies-info">
+                        <h4>Cooking</h4>
+                        <p>
+                            I have a strong passion for cooking and constantly seek out new recipes to explore and enjoy
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="hobbies-box">
+                <div class="hobbies-wrapper">
+                    <div class="hobbies-icon">
+                        <i class="fa-solid fa-gamepad"></i>
+                    </div>
+
+                    <div class="hobbies-info">
+                        <h4>Strategy Games</h4>
+                        <p>
+                            Passionate about strategy games that enhance logical thinking and decision-making
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="hobbies-box">
+                <div class="hobbies-wrapper">
+                    <div class="hobbies-icon">
+                        <i class="fa-solid fa-earth-americas"></i>
+                    </div>
+
+                    <div class="hobbies-info">
+                        <h4>Traveling and Exploring</h4>
+                        <p>
+                            I enjoy traveling and exploring new places. It helps me stay
+                            open-minded and inspired in both life and work
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
     <section class="skills" id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">Technical <span class="span-hl">Skills</span></h2>
 
         <div class="skills-container">
-            <div class="skills-box">
-                <div class="skill-info">
-                    <i class="fa-solid fa-handshake-simple"></i>
-                    <h4>Soft skills</h4>
-                    <p>English: Basic communication and reading comprehension skills</p>
-                    <p>Teamwork skills: Able to collaborate effectively and contribute to problem-solving in team
-                        environments</p>
-                </div>
+            <div class="skills-title">
+                <i class="fa-solid fa-code"></i>
+                <h4>Programming Languages</h4>
             </div>
 
             <div class="skills-box">
-                <div class="skill-info">
-                    <i class="fa-solid fa-code"></i>
-                    <h4>Font-end</h4>
-                    <p>Html, Css, Javascript</p>
+                <div class="circle" data-degree="70" data-color="#1e90ff">
+                    <span class="number reveal-circle">70<span>%</span></span>
+                    <p>JavaScript</p>
                 </div>
+
+                <div class="circle" data-degree="55" data-color="#1e90ff">
+                    <span class="number reveal-circle">55<span>%</span></span>
+                    <p>Python</p>
+                </div>
+
+                <div class="circle" data-degree="50" data-color="#1e90ff">
+                    <span class="number reveal-circle">50<span>%</span></span>
+                    <p>Java</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="skills-container">
+            <div class="skills-title">
+                <i class="fa-solid fa-laptop-code"></i>
+                <h4>Web development</h4>
             </div>
 
             <div class="skills-box">
-                <div class="skill-info">
-                    <i class="fa-solid fa-database"></i>
-                    <h4>Back-end</h4>
-                    <p>Java, Javascript</p>
+                <div class="circle" data-degree="85" data-color="#1e90ff">
+                    <span class="number reveal-circle">85<span>%</span></span>
+                    <p>Html</p>
                 </div>
+
+                <div class="circle" data-degree="60" data-color="#1e90ff">
+                    <span class="number reveal-circle">60<span>%</span></span>
+                    <p>css</p>
+                </div>
+
+                <div class="circle" data-degree="40" data-color="#1e90ff">
+                    <span class="number reveal-circle">40<span>%</span></span>
+                    <p>React</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="skills-container">
+            <div class="skills-title">
+                <i class="fa-solid fa-database"></i>
+                <h4>Database</h4>
             </div>
 
             <div class="skills-box">
-                <div class="skill-info">
-                    <i class="fa-brands fa-github"></i>
-                    <h4>Technical Skills</h4>
+                <div class="circle" data-degree="60" data-color="#1e90ff">
+                    <span class="number reveal-circle">60<span>%</span></span>
+                    <p>SQLServer</p>
+                </div>
+
+                <div class="circle" data-degree="70" data-color="#1e90ff">
+                    <span class="number reveal-circle">70<span>%</span></span>
+                    <p>MySQL</p>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="skills-container">
+            <div class="skills-title">
+                <i class="fa-solid fa-screwdriver-wrench"></i>
+                <h4>Tools</h4>
+            </div>
+
+            <div class="skills-box">
+                <div class="circle" data-degree="40" data-color="#1e90ff">
+                    <span class="number reveal-circle">40<span>%</span></span>
+                    <p>Figma</p>
+                </div>
+
+                <div class="circle" data-degree="50" data-color="#1e90ff">
+                    <span class="number reveal-circle">50<span>%</span></span>
                     <p>Git, Github</p>
-                    <p>Basic understanding of version control with Git and GitHub</p>
+                </div>
+
+                <div class="circle" data-degree="60" data-color="#1e90ff">
+                    <span class="number reveal-circle">60<span>%</span></span>
+                    <p>VS Code</p>
+                </div>
+            </div>
+        </div>
+
+
+        <h2 class="heading" style="margin-top: 15rem">Soft <span class="span-hl">Skills</span></h2>
+
+        <div class="soft-skills-container">
+            <div class="soft-skills-box">
+                <i class="fa-solid fa-people-group"></i>
+                <div class="soft-skills-box__content">
+                    <span>Teamwork and collaboration</span>
+                    <p>
+                        Able to collaborate effectively with team members to achieve common goals
+                    </p>
+                </div>
+            </div>
+
+            <div class="soft-skills-box">
+                <i class="fa-solid fa-language"></i>
+                <div class="soft-skills-box__content">
+                    <span>English Communication</span>
+                    <p>
+                        Proficient in reading technical documents, writing reports, and basic verbal communication in
+                        English
+                    </p>
+                </div>
+            </div>
+
+            <div class="soft-skills-box">
+                <i class="fa-solid fa-clock"></i>
+                <div class="soft-skills-box__content">
+                    <span>Time Management</span>
+                    <p>
+                        Capable of organizing tasks efficiently to meet deadlines and optimize productivity
+                    </p>
+                </div>
+            </div>
+
+            <div class="soft-skills-box">
+                <i class="fa-solid fa-lightbulb"></i>
+                <div class="soft-skills-box__content">
+                    <span>Problem-solving</span>
+                    <p>
+                        Skilled in analyzing and resolving complex problems with logical and flexible thinking
+                    </p>
+                </div>
+            </div>
+
+            <div class="soft-skills-box">
+                <i class="fa-solid fa-comments"></i>
+                <div class="soft-skills-box__content">
+                    <span>Communication Skills</span>
+                    <p>
+                        Communicates clearly, listens actively, and conveys information effectively in various
+                        situations
+                    </p>
+                </div>
+            </div>
+
+            <div class="soft-skills-box">
+                <i class="fa-solid fa-shuffle"></i>
+                <div class="soft-skills-box__content">
+                    <span>Adaptability</span>
+                    <p>
+                        Easily adapts to new environments and changes, always eager to learn and improve
+                    </p>
                 </div>
             </div>
         </div>
@@ -146,7 +381,7 @@
     </section>
 
     <section class="projects" id="projects">
-        <h2 class="heading">My <span>Project</span></h2>
+        <h2 class="heading">My <span class="span-hl">Project</span></h2>
 
         <div class="projects-container">
             <div class="projects-box">
@@ -190,7 +425,7 @@
     </section>
 
     <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me</span></h2>
+        <h2 class="heading">Contact <span class="span-hl">Me</span></h2>
 
         <div class="contact-container">
             <div class="contact-form">
@@ -227,6 +462,8 @@
             <li><i class="fa-solid fa-phone"></i> 0356849962</li>
         </ul>
     </footer>
+
+    <script src="assets/scripts/script.js"></script>
 </body>
 
 </html>
